--- a/views/deployments/inputs.haml
+++ b/views/deployments/inputs.haml
@@ -1,7 +1,7 @@
 %h1
   %a{:href => "/api/deployments"} Deployments
   %span >
-  %a{:href => @deployment[0]["links"][0]["href"] }= @deployment[0]["name"]
+  %a{:href => @deployment.href }= @deployment.name
   %span > Inputs
 .scrollable_list.inputs
   - @results[0].each do |input|
