--- a/views/deployments/servers.haml
+++ b/views/deployments/servers.haml
@@ -1,15 +1,17 @@
 %h1
   %a{:href => "/api/deployments"} Deployments
   %span >
-  %a{:href => @deployment[0]["links"][0]["href"] }= @deployment[0]["name"]
+  %a{:href => @deployment.href }= @deployment.name
   %span > Servers
 .scrollable_list.inputs
-  - @results[0].each do |result|
+  - @results.each do |result|
     %p
       %b
-        %span= result["name"]
+        %span
+          = result.name
+          %a{:href => result.href, :rel=>"nofollow", :'data-method' => "delete", :'data-confirm' => "Are you sure?"} terminate
 %br
-%form{:action => @deployment[0]["links"][0]["href"] + "/servers", :method => :post}
+%form{:action => @deployment.href + "/servers", :method => :post}
   %label{:for => "name"} Server name:
   %input{:type => "textbox", :name => "name", :id => "name"}
   %input{:type => "submit", :value => "Add Server"}
